--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 html {
   box-sizing: border-box;
-  font-family: "Playfair Display", serif;
-  font-size: 16px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
   color: rgb(203, 255, 155);
 }
 
